--- a/nilton.academias.Application/Views/Shared/_LayoutGeral.cshtml
+++ b/nilton.academias.Application/Views/Shared/_LayoutGeral.cshtml
@@ -25,7 +25,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted footer-general">
         <div class="container">
             <p class="text-center">
                 &copy; 2023 - Academia Frangotes
