--- a/nilton.academias.Application/Views/Shared/_MenuGeneralPartialView.cshtml
+++ b/nilton.academias.Application/Views/Shared/_MenuGeneralPartialView.cshtml
@@ -23,12 +23,21 @@
                                 <i class="fa-solid fa-right-to-bracket"></i> &emsp;Entrar
                             </a>
                         </li>
-                        <li><hr class="dropdown-divider" /></li>
-                        <li>
+                        @if (User.Identity.IsAuthenticated)
+                        {                            
+                            <li><hr class="dropdown-divider" /></li>
+                            <form asp-controller="Account" asp-action="LogOut" method="post">
+                                <button type="submit" class="dropdown-item">
+                                    <i class="fa-solid fa-door-open"></i>
+                                    &emsp;Sair
+                                </button>
+                            </form>
+                        }
+@*                        <li>
                             <a class="dropdown-item" href="#">
                                 <i class="fa-solid fa-door-open"></i> &emsp;Sair
                             </a>
-                        </li>
+                        </li>*@
                     </ul>
                 </li>
             </ul>
